--- a/templates/teams.html
+++ b/templates/teams.html
@@ -8,7 +8,7 @@
   </div>
 
   {% if is_captain_or_admin %}
-    <a class="btn btn-primary" href="{{ url_for('team_create') }}">+ Team erstellen</a>
+    <a class="btn btn-primary" href="{{ url_for('team_create_route') }}">+ Team erstellen</a>
   {% endif %}
 </div>
 
